# huayu-cli

./: .gitignore  20260705A.md  20260705B.md  Cargo.toml  PLAN.md  PRD.md  PRD20260705.md  README.md  build-linux-all.sh  build-linux.sh  build-tools-linux.sh  build.ps1  deploy.ps1  deploy.sh  huayu-deploy-readme.md  huayu-deploy.sh  huazhen-deploy-readme.md  huazhen-deploy.sh  package-linux.sh  package-tools.ps1  package.ps1  versions.json
doc/: README.md  build-deploy.md  readme.md  readmev1.md  readmev2.md  readmev3.md  readmev4.md
docs/: huayu-readme.md
release/: huayu.ps1  huayu.sh  huazhen.ps1  huazhen.sh
skills/claude/: code-review.md  refactor.md
skills/codex/: rules.md
src/: command.rs  config.rs  error.rs  main.rs  skills.rs  tool.rs
src/cli/: mod.rs
src/cli/commands/: login.rs  mod.rs  status.rs  update.rs
src/services/: installer.rs  login.rs  mod.rs  model_fetch.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
