[package]
name = "huayu"
version = "0.2.26"
edition = "2021"

[[bin]]
name = "huayu"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ratatui     = "0.29"
crossterm   = { version = "0.28", features = ["event-stream"] }
colored     = "2.1"
dirs        = "5.0"
uuid        = { version = "1", features = ["v4"] }
thiserror   = "1.0"
strip-ansi-escapes = "0.2"
which               = "6.0"
portable-pty        = "0.8"
zip                 = { version = "2", default-features = false, features = ["deflate"] }
flate2              = "1"
tar                 = "0.4"
chrono              = "0.4"

[dev-dependencies]
tempfile = "3"
